# ceia-nlp-II-tp-2

./: Makefile  README.md  load.py  pyproject.toml  requirements.txt  run.py
doc/: diagrams.excalidraw
src/: chatService.py  chunk.py  settings.py  vector.py  vectorService.py
src/config/: settings.py
